--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 
-title: My Resume
-url: 'http://webjeda.com'
+title: @secalert on security
+url: 'http://secalert.net'
 baseurl: '/online-cv' #change it according to your repository name
-
 
 # Enable one of these styles by removing #
 #style: styles-2
@@ -11,19 +10,16 @@ baseurl: '/online-cv' #change it according to your repository name
 #style: styles-5
 #style: styles-6
 
-
-
-
 #Profile information
-name: Alan Doe
-tagline: Full Stack Developer
+name: David Vieira-Kurz
+tagline: Security Ninja
 pic: profile.png  #place a 100x100 picture inside /assets/images/ folder and provide the name of the file below
 
 #sidebar links
-email: alan.doe@website.com
-phone: 012 345 6789
-website: blog.webjeda.com #do not add http://
-linkedin: alandoe
-github: alandoe
-twitter: '@twittername'
+email: david.kurz@majorsecurity.com
+#phone: 
+#website: blog.webjeda.com #do not add http://
+#linkedin: alandoe
+#github: alandoe
+twitter: '@secalert'
 
